--- a/spotify-song-recs/src/App.css
+++ b/spotify-song-recs/src/App.css
@@ -1,44 +1,31 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #37d461;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header {
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.call-to-action {
+  display: flex;
+  width: 60%;
+  color: #37d461;
+}
+
+.demo {
+  
 }
 
 .btn-spotify {
-  background-color:#44c767;
+  background-color:#37d461;
   border-radius:28px;
   border:1px solid #18ab29;
   display:inline-block;
@@ -51,6 +38,7 @@
   text-decoration:none;
   text-shadow:0px 1px 0px #2f6627;
 }
+
 .btn-spotify:active {
   position:relative;
   top:1px;
