--- a/spotify-song-recs/src/App.css
+++ b/spotify-song-recs/src/App.css
@@ -1,19 +1,21 @@
 .App {
-  text-align: center;
   background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: rgba(104, 207, 159, 0.719);
+  background-color: rgba(104, 207, 159, 0.39);
   /*
   background: url(background.jpg);
   background-size: cover;
   background-position: 50%;
   background-repeat: no-repeat;
   */
-  
+}
+
+nav {
+  font-size: large;
 }
 
 .App-header {
@@ -27,26 +29,62 @@
   width: 100%;
   justify-content: space-around;
   font-size: calc(4px + 1vmin);
-  color: #37d461;
-}
-
-.hero-container {
-  align-items: center;
-  width: 60%;
+  /*color: #37d461;*/
   color: black;
 }
 
+.hero-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 60%;
+  color: black;
+  justify-content: space-between;
+  
+}
+
 #hero-txt {
-  font-size: 4vh;
+  font-size: 6vh;
   font-weight: bold;
+  margin-bottom: 0;
+}
+
+.hero {
+  width: 50%;
+  min-width: 370px;
 }
 
 .hero-right {
   /*  image or demo of app will go here OR examples of search params*/
+  background-color: azure;
+  width: 50%;
+  height: 300px;
+  min-height: max-content;
+  min-width: 300px;
+  margin-left: 50px;
+}
+
+ul, li {
+  list-style: none;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul li {
+  background:#ffc;
+  display:block;
+  height:10em;
+  width:10em;
+  padding:1em;
+  margin: 1em;
 }
 
 #message {
-  
+  font-size: 2.5vh;
+  padding-left: 5px;
 }
 
 .parameters {
@@ -55,9 +93,14 @@
 }
 
 .btn-spotify {
+  /*
   background-color:#37d461;
   border-radius:28px;
   border:1px solid #18ab29;
+  */
+  background-color:rgba(0, 0, 0, 0.897);
+  border-radius:28px;
+  border:1px solid black;
   display:inline-block;
   cursor:pointer;
   color:#ffffff;
